--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <header>
-      <h1>Guess My Number!</h1>
+      <h1>Number Prediction!</h1>
       <p class="between">(Between 1 and 25)</p>
       <button class="btn again">Play Again!</button>
       <div class="number">?</div>
